Fixing scrollbars

--- a/frontend/styles/components/cash-finance-lease-calculator.scss
+++ b/frontend/styles/components/cash-finance-lease-calculator.scss
@@ -19,7 +19,7 @@
     }
 
     &__lease-table-container {
-        overflow: scroll;
+        overflow: hidden;
     }
 
     &__lease-table {
